force-app/main/default/objects/LAM_Contact_Roles__c/LAM_Contact_Roles__c.object-meta.xml
<CustomObject>
    <label>Contact Roles</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>LAM Contact Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>