force-app/main/default/objects/LAM_Contact_Roles__c/fields/Contact_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Office_Phone__c</fullName>
    <formula>Contact__r.Work_Phone__c</formula>
    <label>Contact Office Phone</label>
    <type>Text</type>
</CustomField>