force-app/main/default/objects/LAM_Contact_Roles__c/fields/Legal_Advocacy_Matter__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advocacy_Matter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Legal Advocacy Matter</label>
    <referenceTo>Legal_Advocacy_Matter__c</referenceTo>
    <relationshipName>LAM_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>