force-app/main/default/objects/LAM_Contact_Roles__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Owner</fullName>
            </value>
            <value>
                <fullName>Bill Sponsor (House)</fullName>
            </value>
            <value>
                <fullName>Bill Sponsor (Senate)</fullName>
            </value>
            <value>
                <fullName>Code Enforcement</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>County Attorney</fullName>
            </value>
            <value>
                <fullName>Court Clerk</fullName>
            </value>
            <value>
                <fullName>Court Reporter</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Defense Attorney</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Local Counsel</fullName>
            </value>
            <value>
                <fullName>Placement Partner</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Plaintiff Attorney</fullName>
            </value>
            <value>
                <fullName>Primary Sponsor (House)</fullName>
            </value>
            <value>
                <fullName>Primary Sponsor (Senate)</fullName>
            </value>
            <value>
                <fullName>Pro-Bono Counsel</fullName>
            </value>
            <value>
                <fullName>Prosecutor</fullName>
            </value>
            <value>
                <fullName>Subject/Defendant</fullName>
            </value>
            <value>
                <fullName>Videographer</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
                <isActive>false</isActive>
                <label>Officer</label>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
                <isActive>false</isActive>
                <label>Stakeholder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>