force-app/main/default/objects/LAM_Contact_Roles__c/fields/Role_Notes__c.field-meta.xml
<CustomField>
    <fullName>Role_Notes__c</fullName>
    <label>Role Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>