force-app/main/default/objects/LAM_Contact_Roles__c/fields/Withdrew__c.field-meta.xml
<CustomField>
    <fullName>Withdrew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Withdrew</label>
    <type>Checkbox</type>
</CustomField>